# GamesByHer2020

./: .gitignore  .gitmodules  README.md
.github/workflows/: msbuild.yml  xcode.yml
SFMLTemplate/: .gitignore  .gitmodules  CMakeLists.txt  README.md  config-windows.bat  install-vcpkg-macos.sh  install-vcpkg-windows.bat  log.txt  setup-macos.sh  setup-windows.bat
SFMLTemplate/game/assets/json/: level01.json  level02.json  setup.json
SFMLTemplate/game/assets/levels/: level_01.json
SFMLTemplate/source/: asteroid.cpp  asteroid.h  cameranode.cpp  cameranode.h  credits.cpp  credits.h  followcameranode.cpp  followcameranode.h  gamesetupscene.cpp  gamesetupscene.h  gamestate.cpp  gamestate.h  levelselectscene.cpp  levelselectscene.h  main.cpp  maingamescene.cpp  maingamescene.h  title_scene.cpp  title_scene.h  titlescene.cpp  titlescene.h
TextAdventure/: TextAdventure.sln  TextAdventure.vcxproj  TextAdventure.vcxproj.filters
TextAdventure/TextAdventure.xcodeproj/: project.pbxproj
TextAdventure/TextAdventure.xcodeproj/xcshareddata/xcschemes/: TextAdventure.xcscheme
TextAdventure/content/: items.txt
TextAdventure/content/locations/: area01.txt
TextAdventure/source/: game.cpp  game.h  gamedata.cpp  gamedata.h  items.cpp  items.h  main.cpp  player.cpp  player.h  utils.cpp  utils.h
